--- a/source/layouts/_banner.html.erb
+++ b/source/layouts/_banner.html.erb
@@ -1,16 +1,7 @@
----
-title: Le Wagon - Middleman
----
-
 <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/lisbon');">
   <div class="banner-content">
     <h1>Le Wagon Lisbon</h1>
-    <p>Learn to code with us in Lisbon</p>
+    <p>Learn to code with us in Lison</p>
     <a class="btn btn-primary btn-lg">Start now</a>
   </div>
 </div>
-
- <%=partial 'layouts/cards'%>
-
-
-
