--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,8 +10,13 @@
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application" %>
     <%= favicon_tag 'images/favicon.png' %>
+<!--     <%= image_tag "logo.png", id: "logo" %> -->
+
   </head>
   <body>
+    <%= partial "layouts/navbar" %>
     <%= yield %>
+    <%= partial "layouts/footer" %>
+
   </body>
 </html>
