--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background: #F4F4F4;
+  background: $light-yellow;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -7,7 +7,7 @@
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   .fa-heart {
-    color: #D23333;
+    color: $red;
   }
 }
 
