--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
-$yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
-$gray: #000000;
+$red: #FF0033;
+$blue: #33CCFF;
+$yellow: #FFFF66;
+$orange: #FF6633;
+$green: #00FF7F;
+$gray: #3E3D3D;
+$light-yellow: #FEFFA9;
 $light-gray: #F4F4F4;
