--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -1,10 +1,12 @@
 .card {
-  height: 175px;
+  height: 180px;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
   color: white;
   position: relative;
+  margin: 60px 25px;
+
 }
 .card-user {
   position: absolute;
